[package]
name = "post_notes"
description = "testing stuff"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11"
colog = "1.3"
log = "0.4.0"
serde_json = "1"
comrak = "0.40"
tera = "1"
rayon = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
derive_more = { version = "2", features = ["display"] }
