[package]
name = "post_notes"
description = "testing stuff"
version = "0.1.2"
edition = "2024"

[dependencies]
toml = "0.9.5"
clap = "4.5.43"
regex = "1.11.1"
colog = "1.3.0"
log = "0.4.27"
serde_json = "1.0.142"
comrak = "0.40.0"
tera = "1.20.0"
rayon = "1.10.0"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
derive_more = { version = "2.0.1", features = ["display"] }
