[package]
name = "post-notes"
description = "Building a cute digital garden."
version = "0.1.1"
edition = "2024"

[dependencies]
pretty_assertions = "1.4.1"
anyhow = "1.0.98"
regex = "1.11.1"
colog = "1.3.0"
log = "0.4.27"
comrak = "0.41.0"
config = "0.15.14"
clap = "4.5.45"
tera = "1.20.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.142"
derive_more = { version = "2.0.1", features = ["display"] }
